feat:丰富项目架构

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: yhl
+ * @Date: 2023-01-18 13:59:52
+ * @LastEditors: Do not edit
+ * @LastEditTime: 2023-01-18 16:39:23
+ * @FilePath: /electron-vite/index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +15,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/renderer/main.ts"></script>
   </body>
 </html>
